# ChangeLog for sys-libs/suacomp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/suacomp/ChangeLog,v 1.9 2011/06/10 13:59:03 mduft Exp $

*suacomp-0.6.12 (10 Jun 2011)

  10 Jun 2011; Markus Duft <mduft@gentoo.org> -suacomp-0.6.7.ebuild,
  -suacomp-0.6.8.ebuild, -suacomp-0.6.9.ebuild, +suacomp-0.6.12.ebuild:
  remove obsolete ebuilds, add new 0.6.12

*suacomp-0.6.11 (25 May 2011)

  25 May 2011; Markus Duft <mduft@gentoo.org> +suacomp-0.6.11.ebuild,
  suacomp-9999.ebuild:
  add new version

*suacomp-0.6.10 (24 May 2011)

  24 May 2011; Markus Duft <mduft@gentoo.org> +suacomp-0.6.10.ebuild:
  add new release (build-bug-fix release).

*suacomp-0.6.9 (23 May 2011)

  23 May 2011; Markus Duft <mduft@gentoo.org> -suacomp-0.6.5.ebuild,
  -suacomp-0.6.6.ebuild, +suacomp-0.6.9.ebuild, suacomp-9999.ebuild:
  add new version with interix5 specific fixes. update live ebuild, remove old
  versions.

*suacomp-9999 (20 May 2011)
*suacomp-0.6.8 (20 May 2011)

  20 May 2011; Markus Duft <mduft@gentoo.org> +suacomp-0.6.8.ebuild,
  +suacomp-9999.ebuild:
  added new version + live ebuild

*suacomp-0.6.6 (04 Nov 2010)

  04 Nov 2010; Markus Duft <mduft@gentoo.org> -suacomp-0.6.4.ebuild,
  suacomp-0.6.5.ebuild, +suacomp-0.6.6.ebuild:
  removed old, added new, bump EAPI

*suacomp-0.6.3 (03 Sep 2010)

  03 Sep 2010; Markus Duft <mduft@gentoo.org> +suacomp-0.6.3.ebuild:
  version bump

  16 Jul 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Fixed herd tag on metadata.xml.

*suacomp-0.4 (13 Jul 2010)

  13 Jul 2010; Markus Duft <mduft@gentoo.org> +suacomp-0.4.ebuild,
  +metadata.xml:
  initial add of suacomp to the tree. for interix-prefix only
