@@ -1,9 +1,11 @@
 DIST suacomp-0.6.10.tar.gz 31844 RMD160 858e0dcf0e66c92bb1fbf5b85551e8fc6eea1ba6 SHA1 5ea68d083720c5ad5bb2391d7e92e9e5086789a0 SHA256 8599a6a3d4af2b1a061881e5dacc08dce971db615c73564ab755d73d5ebba924
 DIST suacomp-0.6.11.tar.gz 34370 RMD160 d19a0f7f0e9205e7f275a913ca81a8ef65145645 SHA1 7f9869dc0613a450dfc8d7f8d92dcd595ee14caf SHA256 9af524fb98153b44e777475f1cb1514a54659a73ce436387ffdafd3b69e87d80
 DIST suacomp-0.6.12.tar.gz 35577 RMD160 a5abb40c7d61675e001465ff417f32328c16e459 SHA1 709d6de7fae37b1a9e66ffde3c77d3690a8d71ac SHA256 bc511f6f8e8798f55e8677ea28be11c41f9078eaedecd4fa8aa727bb54766cb4
+DIST suacomp-0.6.13.tar.gz 35838 RMD160 9677636a07b90233cbde8ba872429c08b566db4f SHA1 01b661d27fe834344b4e133d7e1f156f4c4caf3b SHA256 e8f488cec531dd64b797900a10e13c35758fe20bc6ef97c3da538246318afd3f
 EBUILD suacomp-0.6.10.ebuild 1464 RMD160 c452297290912b4291da7584fc00fecbf7c7a4cd SHA1 d74757834362ede902d418d7d98ae8d0779d4e4b SHA256 cc15e9c2391c6d5a4fae09a3b13bda8179609e387f1d182f5766ad7a406b768f
 EBUILD suacomp-0.6.11.ebuild 1347 RMD160 84c4330a8bfa9671a7c3758d94c94018e76a8e51 SHA1 8c08caf01082fcf404ae4759a1c8efd3650f2536 SHA256 de142ee171bc671079f69a2158f99313b919cfa7b0f15b00c1549dbb49bb8bd4
 EBUILD suacomp-0.6.12.ebuild 1347 RMD160 0d4ff85b134447a2a3ddd861a1f21e18ae4d3db3 SHA1 2d6f978c746e74b9f8c4de11b8cf6fac85ce7c8d SHA256 0e6d70b75e089573c7a444bd270b7e8d169f9bf0fa784b0e215affc7d1e94317
+EBUILD suacomp-0.6.13.ebuild 1347 RMD160 c0b594b43dad4bdaa43225bfc5030b992e3e2df7 SHA1 1f08a7755c0f727dd14e13331b672b063cd9b42c SHA256 d3c13987bf4603485140f6437fe5346d6ef4851edfa61e510348c3891b7e9cd5
 EBUILD suacomp-9999.ebuild 1340 RMD160 1663d74bbd37442f2b42d2881f0ed1ff8a346c99 SHA1 de46914e46a3aeb527d28b902377b986ee528198 SHA256 12ef1ca566e18c4be299b2e35aaa0e2ee085cac2ba528917284ee7627ba9355f
-MISC ChangeLog 1744 RMD160 af6c1567e8263c59407e60b1220bf93c449aeffa SHA1 b5e7f20f12201c694da2922c2d6ee79cee5e3164 SHA256 6c3a57b41ef6993b79a89678ea16001ec5e171756acfc2bee6d452d98a9d4c9f
+MISC ChangeLog 1865 RMD160 a8d58460619b526be2114eff3d98b40c81118782 SHA1 b3ee06e6d80c404e039b28a4e6b3812d761ee9dc SHA256 d7e48470caaacb9d7ab6e1d6e35a52af7077eb79208736f5373ba1883c8bfc4f
 MISC metadata.xml 463 RMD160 8d5a39c8c367b923a1ffa3d54cb7573a0dff3d61 SHA1 035dd048b0f1bbe16174cfdd92949914a451e709 SHA256 48ff68dfa4b39d46068d853d57bdb4a35ef6304368397fcb45105f3a4798e2ca
