@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/suacomp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/suacomp/ChangeLog,v 1.9 2011/06/10 13:59:03 mduft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/suacomp/ChangeLog,v 1.10 2011/06/15 08:13:11 mduft Exp $
+
+*suacomp-0.6.13 (15 Jun 2011)
+
+  15 Jun 2011; Markus Duft <mduft@gentoo.org> +suacomp-0.6.13.ebuild:
+  add new version
 
 *suacomp-0.6.12 (10 Jun 2011)
 
